2009-08-13  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* AsyncMethodResult.cs: Store a exception field in case the called
	method actually caused an exception. This way we can throw it later.
	* XplatUIDriver.cs: Check if the async method result has an exception
	- throw it if needed. 
	The idea is that Control.Invoke throws the exception from the thread
	that called it, not the main MWF thread. 
	Patch by Tom Spink <tspink@gmail.com>. Fixes #497175.

2009-08-12  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataGrid.cs: In mouse move we need to shift the selection in case
	the pointer is on the row headers.
	Fixes #323052.

2009-08-11  Ivan N. Zlatev  <contact@i-nz.net>

	* SplitContainer.cs: Avoid updating the splitter distance if it hasn't 
	moved. Updating the distance was causing a re-layout which was resetting 
	the clicks counter and preventing DoubleClick from every firing.
	[Fixes bug #521387]

2009-08-11  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataGrid.cs: When a new TableStyle is added, don't create new
	columns for it unless it is empty - this is the correct way to both
	respect the columns if they were provided by our user, or create them
	for him in case the column collection is empty.
	Fixes #323111.

2009-08-10  Carlos Alberto Cortez <calberto.cortez@gmail.com> 

	* DataGrid.cs: Actually call BindColumns in the handler for
	ListManager.MetaDataChanged, since the current code is already taking
	into account the scenario when a custom table style is used - this was
	confusing us before, and that's why we commented the call to
	BindColumns. Also call CallAreasAndInvalidate, to properly reflect the
	changes as needed.
	Fixes #465021.

2009-08-10  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* DataGrid.cs: When setting the data source, if we have a user
	provided table style available, force a complete bind in case the
	column styles for that table style is empty.

2009-08-09  Ivan N. Zlatev  <contact@i-nz.net>
